# LabWorkStackQueue

./: CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
ErrorLib/: CMakeLists.txt  TError.hpp  TError_Adv.h  TError_Imp.cpp
SQApp/: CMakeLists.txt  main_SQ.cpp  test_debug.cpp
SQLib/: CMakeLists.txt  TFormula.h  TMultiStack.h  TMultiStackList.h  TQueue.h  TStack.h  TVector_AdvImp.h
SQTest/: CMakeLists.txt  test_TMultiStack.cpp  test_TMultiStackList.cpp  test_TQueue.cpp  test_TStack.cpp
StringLib/: TString_Imp.cpp
